syntax = "proto3";

option java_multiple_files = true;
package com.vinci.flashsale.account.dto;

message AccountReduceRequest {
  string user_id = 1;
  int32 money = 2;
}